# rust-examples

./: .gitignore  Cargo.toml  fictional_file.txt  hosts.txt
attributes/: Cargo.toml
attributes/src/: main.rs
benchmarks/: Cargo.toml
benchmarks/benches/: to_string.rs
benchmarks/src/: lib.rs
cargo/: build.rs
conversion/: Cargo.toml
crates/: Cargo.toml
crates/src/: main.rs
custom_types/: Cargo.toml
custom_types/src/: main.rs
derive_from/: Cargo.toml
derive_from/src/: lib.rs
derive_from/tests/: test_macros.rs
expressions/: Cargo.toml
expressions/src/: main.rs
flow_control/: Cargo.toml
functions/: Cargo.toml
functions/src/: main.rs
generics/src/: main.rs
hello-async/: Cargo.toml
hello-async/src/: main.rs
helloworld/: Cargo.toml
helloworld/src/: main.rs
http/src/: httprequest.rs  httpresponse.rs
httpserver/: Cargo.toml
httpserver/public/: 404.html  health.html  index.html
httpserver/src/: handler.rs  main.rs  router.rs  server.rs
lists/src/: fifth.rs  first.rs  fourth.rs  main.rs  second.rs  sixth.rs  third.rs
macro_rules/src/: main.rs
meta/: Cargo.toml
modules/: Cargo.toml
modules/src/: main.rs
modules/src/my/: mod.rs
primitives/: Cargo.toml
primitives/src/: main.rs
scoping_rules/: Cargo.toml
testing/: Cargo.toml
testing/src/: dev_dependencies.rs  document_testing.rs  lib.rs  unit_testing.rs
testing/tests/: integration_layer.rs
testing/tests/common/: mod.rs
tracing_opentelemetry/: Cargo.toml  docker-compose.yml  otel-collector-config.yml  otel-logs-pipeline.yml  otel-metrics-pipeline.yml  otel-traces-pipeline.yml  pipelines.yml
tracing_opentelemetry/src/: main.rs
traits/src/: main.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handler.rs  main.rs  model.rs  route.rs  state.rs
tutor_db/: .env  Cargo.toml  docker-compose.yml
tutor_db/sql/: initdb.sql
tutor_db/src/: dbaccess.rs  error.rs  handler.rs  lib.rs  main.rs  model.rs  route.rs  state.rs
tutor_db/src/dbaccess/: course.rs  tutor.rs
tutor_db/src/handler/: course.rs  general.rs  mod.rs  tutor.rs
tutor_db/src/iter2/: handler.rs  model.rs
tutor_db/src/model/: course.rs  tutor.rs
tutor_db/tests/: course.rs  course_handler.rs  tutor_handler.rs
tutor_db/tests/common/: mod.rs
tutor_nodb/: Cargo.toml
tutor_nodb/src/: handler.rs  main.rs  model.rs  route.rs  state.rs
types/: Cargo.toml
unsafe_operations/src/: main.rs
variable_bindings/: Cargo.toml
variable_bindings/src/: main.rs
