[workspace]
resolver = "2"
members = [
    "helloworld",
    "benchmarks",
    "primitives",
    "custom_types",
    "variable_bindings",
    "types",
    "conversion",
    "expressions",
    "flow_control",
    "functions",
    "modules",
    "crates",
    "attributes",
    "scoping_rules",
    "testing",
    "tcpserver",
    "tcpclient",
    "http",
    "httpserver",
    "tutor_nodb",
    "tutor_db",
    "hello-async",]
