[workspace]
resolver = "2"
members = [
    "helloworld",
    "benchmarks",
    "primitives",
    "custom_types",
    "variable_bindings",
    "types",
    "conversion",
    "expressions",
    "flow_control",
    "functions",
    "modules",
    "crates",
    "cargo",
    "attributes",
    "generics",
    "scoping_rules",
    "traits",
    "macro_rules",
    "testing",
    "tcpserver",
    "tcpclient",
    "http",
    "httpserver",
    "tutor_nodb",
    "tutor_db",
    "hello-async",]
