[package]
name = "tracing_opentelemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.1", features = ["tokio", "rustls"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
tracing-subscriber = "0.3"
tracing-core = "0.1.32"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-otlp = "0.17.0"
futures-util = "0.3.30"