[package]
name = "tutor_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.1.0", features = ["tokio", "rustls"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time"] }
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.34", features = ["serde", "formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
