[package]
name = "tutor_nodb"
version = "0.1.0"
edition = "2021"
default-run = "tutor-service"
[[bin]]
name = "basic-server"
[[bin]]
name = "tutor-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
time = {version = "0.3.34", features = ["serde", "formatting"]}

